fix overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@
 body {
   font-family: sans-serif;
   font-size: 16px;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   scroll-behavior: smooth;
   margin: 2em;
   margin-bottom: 0;
@@ -63,16 +63,15 @@ body {
   /* transition:  1s cubic-bezier(0.175, 0.885, 0.32, 0.9); */
 }
 
-@media screen and (max-width: 480px) {
-  body {
-    /* font-size: 3px; */
-  }
-}
-
 /* Page Wrapper */
 .page-wrapper {
   display: flex;
   flex-direction: column;
+  background: transparent;
+}
+
+section {
+  background: transparent;
 }
 
 button {
@@ -217,7 +216,7 @@ body.active-body::before {
   z-index: 0;
   top: 0;
   left: 0;
-  width: 105vw;
+  width: 100%;
   height: 100%;
   opacity: 0;
   background: var(--bg-gradient);
